== Changelog ==

= 3.2 =
*Release Date - xx September 2021*

- Revise and cleanup code to publish plugin
- Fixed: Custom selection.json path is not working

= 3.1 =
*Release Date - 24 August 2021*

* Add selected icon using PHP instead of JS.

= 3.0 =
*Release Date - 03 August 2021*

- Fix bug: not re-init script on dynamic elements (after duplicating or in ACF tabs)
- Refactor js

= 2.2 =
*Release Date - 08 June 2021*

- Update CSS for VC Param
- Exit function when element is not visible

= 2.0.1 =
*Release Date - 28 January 2021*

- Fix popup not show when add more item in ACF repeater (due to ACF always has a pre-appended clone item)

= 2.0.0 =
*Release Date - 11 January 2021*

- Re-build the whole plugin to use the same structure with VC Param Icomoon
- Check popup position left/right
- Update UI

= 1.0.5 =
*Release Date - 31 December 2020*

- Update UI

= 1.0.4 =
*Release Date - 25 December 2020*

- Check array key exists to prevent PHP Warning

= 1.0.3 =
*Release Date - 12 August 2020*

- Replace get_stylesheet_directory_uri with get_stylesheet_directory to get the file path
- Add conditional logic file_exists in $path variable

= 1.0.2 =
*Release Date - 05 August 2020*

- Check file exists before get file content.
- Replace get_template_directory_uri with get_stylesheet_directory_uri.

= 1.0.1 =
*Release Date - 04 June 2020*

- Auto get selection.json path if value is empty

= 1.0.0 =
*Release Date - 20 May 2020*

- Remove all fields that have not worked yet.
- Add option to return icon class.
- Auto get selection.json path.
- Fix error when using with ACF repeater.